added dev/prod tracks

--- a/canvas_courses_migrated_lt.ipynb
+++ b/canvas_courses_migrated_lt.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import modules\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
@@ -15,43 +16,70 @@
     "from google.oauth2 import service_account\n",
     "\n",
     "import gspread\n",
-    "\n",
+    "import json\n",
     "from canvasapi import Canvas\n",
     "\n",
-    "import plotly.express as px\n",
-    "\n",
-    "from instances import env_keys\n",
-    "#API_KEY = env_keys['API_key']\n",
-    "API_KEY = env_keys['ACCES_TOKEN']\n",
-    "API_URL = env_keys['API_URL']#+'/accounts/1'"
+    "#import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_id = 'canvas-portal-data-custom'\n",
-    "cred_file = 'canvas-portal-data-custom-6e244db3b826.json'\n",
-    "data_dl = 'data'\n",
-    "scopes = [ \"https://www.googleapis.com/auth/drive\", \"https://www.googleapis.com/auth/drive.file\",\n",
-    "            \"https://spreadsheets.google.com/auth/spreadsheets\"]\n",
-    "credentials = service_account.Credentials.from_service_account_file(cred_file,)"
+    "#choose credential file paths and other possible changes:\n",
+    "run_mode = 'dev' #or, 'prod', or 'mig' for when migrating the code\n",
+    "\n",
+    "if run_mode == 'dev':\n",
+    "    cred_file_path = \".\"\n",
+    "    out_table = \"all_courses2\"\n",
+    "elif run_mode == 'prod':\n",
+    "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
+    "    out_table = \"all_courses\"\n",
+    "\n",
+    "elif run_mode == 'mig':\n",
+    "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
+    "    out_table = \"all_courses2\"\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#get Google cloud credentials\n",
+    "project_id = 'canvas-portal-data-custom'\n",
+    "cred_file = '{}/canvas-portal-data-custom-6e244db3b826.json'.format(cred_file_path)\n",
+    "data_dl = 'data'\n",
+    "scopes = [ \"https://www.googleapis.com/auth/drive\", \"https://www.googleapis.com/auth/drive.file\",\n",
+    "            \"https://spreadsheets.google.com/auth/spreadsheets\"]\n",
+    "credentials = service_account.Credentials.from_service_account_file(cred_file,)\n",
+    "\n",
+    "#get Canvas credentials\n",
+    "cred_file2 = '{}/instances.json'.format(cred_file_path)\n",
+    "with open(cred_file2,'r') as cred2:\n",
+    "    cred_json = json.load(cred2)\n",
+    "\n",
+    "API_KEY = cred_json['ACCES_TOKEN']\n",
+    "API_URL = cred_json['API_URL']#+'/accounts/1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x10732ac18>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x113258fd0>}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +191,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +1015,7 @@
    ],
    "source": [
     "all_courses_df[all_courses_df.if_sandbox_course==0]\n",
-    "all_courses_df.to_gbq('lt_courses.all_courses2', project_id, if_exists='replace', credentials=credentials)\n",
+    "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
    ]
   }
