add path to excel file

--- a/canvas_courses_migrated_lt.ipynb
+++ b/canvas_courses_migrated_lt.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
    "source": [
     "#Get the LT list from the Excel sheet\n",
     "lt_df_cols = ['School', 'Dept_num', 'Dept_name', 'Name', 'Email']\n",
-    "lt_df = pd.read_excel('Learning_Technologists_updating.xlsx')\n",
+    "lt_df = pd.read_excel('{}/Learning_Technologists_updating.xlsx'.format(cred_file_path))\n",
     "lt_df.columns = lt_df_cols\n",
     "lt_df['Email'] = lt_df.Email.str.lower()\n",
     "lt_df.tail()"
