--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -24,12 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "#choose credential file paths and other possible changes:\n",
-    "run_mode = 'dev' #or, 'prod', or 'mig' for when migrating the code\n",
+    "run_mode = 'prod_home' #or, 'prod', or 'mig' for when migrating the code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "if run_mode == 'dev':\n",
     "    cred_file_path = \".\"\n",
@@ -38,6 +46,11 @@
     "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
     "    out_table = \"all_courses4\"\n",
     "\n",
+    "elif run_mode == 'prod_home':\n",
+    "    cred_file_path = \".\"\n",
+    "    out_table = \"all_courses4\"\n",
+    "\n",
+    "    \n",
     "elif run_mode == 'mig':\n",
     "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
     "    out_table = \"all_courses3\"\n",
@@ -46,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x105412e10>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x110050390>}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +204,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +460,7 @@
        "[2337 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -492,134 +505,10 @@
      "text": [
       "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:21: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>course_id</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>Course_name</th>\n",
-       "      <th>num_files</th>\n",
-       "      <th>num_assignments</th>\n",
-       "      <th>num_tot_fa</th>\n",
-       "      <th>last_update_at</th>\n",
-       "      <th>if_LT_led</th>\n",
-       "      <th>LT_email</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3145</td>\n",
-       "      <td>Canvas Testing</td>\n",
-       "      <td>Canvas Core Team Sandbox</td>\n",
-       "      <td>11</td>\n",
-       "      <td>15</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2020-07-07 15:02:45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3146</td>\n",
-       "      <td>Canvas Testing</td>\n",
-       "      <td>Growing with Canvas</td>\n",
-       "      <td>36</td>\n",
-       "      <td>10</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2020-05-05 16:07:49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3147</td>\n",
-       "      <td>Manually-Created Courses</td>\n",
-       "      <td>Admin Guide</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2020-05-08 18:15:06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3148</td>\n",
-       "      <td>Open Membership</td>\n",
-       "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
-       "      <td>36</td>\n",
-       "      <td>9</td>\n",
-       "      <td>45</td>\n",
-       "      <td>2020-07-15 14:38:58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3149</td>\n",
-       "      <td>Canvas Demo Courses</td>\n",
-       "      <td>Template 1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2020-05-12 16:18:43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   course_id                      Dept  \\\n",
-       "0       3145            Canvas Testing   \n",
-       "1       3146            Canvas Testing   \n",
-       "2       3147  Manually-Created Courses   \n",
-       "3       3148           Open Membership   \n",
-       "4       3149       Canvas Demo Courses   \n",
-       "\n",
-       "                                        Course_name  num_files  \\\n",
-       "0                          Canvas Core Team Sandbox         11   \n",
-       "1                               Growing with Canvas         36   \n",
-       "2                                       Admin Guide         26   \n",
-       "3  Career Foundations - Incoming MBA Class of 2022          36   \n",
-       "4                                        Template 1          2   \n",
-       "\n",
-       "   num_assignments  num_tot_fa      last_update_at  if_LT_led  LT_email  \n",
-       "0               15          26 2020-07-07 15:02:45          0       NaN  \n",
-       "1               10          46 2020-05-05 16:07:49          0       NaN  \n",
-       "2                0          26 2020-05-08 18:15:06          0       NaN  \n",
-       "3                9          45 2020-07-15 14:38:58          0       NaN  \n",
-       "4                3           5 2020-05-12 16:18:43          0       NaN  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Change line #7 for full list\n",
+    "#Check that the migration/production/dev is set correctly\n",
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
     "all_course_list_0_rows = []\n",
     "all_course_list_0_cols = ['course_id','Dept', 'Course_name', 'num_files', 'num_assignments', 'num_tot_fa',\n",
@@ -627,7 +516,7 @@
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_courses = 5\n",
-    "elif run_mode == 'prod':\n",
+    "elif run_mode == 'prod' or run_mode=='prod_home':\n",
     "    num_courses = len(all_course_list_0) + 1\n",
     "    \n",
     "for c_id in all_course_list_0[:num_courses]:\n",
@@ -636,6 +525,7 @@
     "all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
     "all_course_list_0_df['if_LT_led'] = 0\n",
     "all_course_list_0_df['LT_email'] = np.nan\n",
+    "print(all_course_list_0_df.shape)\n",
     "all_course_list_0_df.tail()\n"
    ]
   },
@@ -653,7 +543,7 @@
     }
    ],
    "source": [
-    "#Change line #5 for full list\n",
+    "#Check that the migration/production/dev is set correctly\n",
     "lt_courses_row = []\n",
     "lt_courses_cols = all_course_list_0_cols + ['if_LT_led','LT_email']\n",
     "courses_to_exclude = [3157, 3158]\n",
@@ -661,7 +551,7 @@
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_lts = 5\n",
-    "elif run_mode == 'prod':\n",
+    "elif run_mode == 'prod' or run_mode=='prod_home':\n",
     "    num_lts = len(lt_list) + 1\n",
     "\n",
     "\n",
@@ -682,7 +572,7 @@
     "        print('Error {} for user {}'.format(e, user_email))\n",
     "        pass\n",
     "\n",
-    "        \n",
+    "print(all_lt_courses.shape)        \n",
     "all_lt_courses = pd.DataFrame.from_records(lt_courses_row, columns=lt_courses_cols)\n",
     "#all_lt_courses\n"
    ]
