--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#choose credential file paths and other possible changes:\n",
-    "run_mode = 'prod_home' #or, 'prod', or 'mig' for when migrating the code\n"
+    "run_mode = 'dev' #or, 'prod', or 'mig' for when migrating the code\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x110050390>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x112d78940>}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,14 +373,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4870</th>\n",
-       "      <td>5791</td>\n",
-       "      <td>bry:2</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2020-08-12T12:28:23Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4871</th>\n",
        "      <td>5792</td>\n",
        "      <td>21M.302 L02</td>\n",
@@ -412,9 +404,17 @@
        "      <td>139</td>\n",
        "      <td>2020-08-12T16:14:15Z</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4875</th>\n",
+       "      <td>5796</td>\n",
+       "      <td>rtb</td>\n",
+       "      <td>Temporary Sandbox</td>\n",
+       "      <td>139</td>\n",
+       "      <td>2020-08-12T20:30:50Z</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2337 rows × 5 columns</p>\n",
+       "<p>2338 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -425,11 +425,11 @@
        "2364       3148  IntroCDO_MBA22   \n",
        "2365       3149       Template1   \n",
        "...         ...             ...   \n",
-       "4870       5791           bry:2   \n",
        "4871       5792     21M.302 L02   \n",
        "4872       5793         cwalley   \n",
        "4873       5794        tbdavies   \n",
        "4874       5795           fendt   \n",
+       "4875       5796             rtb   \n",
        "\n",
        "                                            course_name  account_id  \\\n",
        "2361                           Canvas Core Team Sandbox          86   \n",
@@ -438,11 +438,11 @@
        "2364   Career Foundations - Incoming MBA Class of 2022           36   \n",
        "2365                                         Template 1           2   \n",
        "...                                                 ...         ...   \n",
-       "4870                                  Temporary Sandbox         139   \n",
        "4871  21M.302 Harmony and Counterpoint II, Lecture 2...         116   \n",
        "4872                                  Temporary Sandbox         139   \n",
        "4873                                  Temporary Sandbox         139   \n",
        "4874                                  Temporary Sandbox         139   \n",
+       "4875                                  Temporary Sandbox         139   \n",
        "\n",
        "                created_at  \n",
        "2361  2020-05-05T16:03:19Z  \n",
@@ -451,16 +451,16 @@
        "2364  2020-05-11T19:13:28Z  \n",
        "2365  2020-05-12T16:17:55Z  \n",
        "...                    ...  \n",
-       "4870  2020-08-12T12:28:23Z  \n",
        "4871  2020-08-12T14:59:01Z  \n",
        "4872  2020-08-12T16:14:14Z  \n",
        "4873  2020-08-12T16:14:15Z  \n",
        "4874  2020-08-12T16:14:15Z  \n",
+       "4875  2020-08-12T20:30:50Z  \n",
        "\n",
-       "[2337 rows x 5 columns]"
+       "[2338 rows x 5 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -505,6 +505,137 @@
      "text": [
       "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:21: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course_id</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Course_name</th>\n",
+       "      <th>num_files</th>\n",
+       "      <th>num_assignments</th>\n",
+       "      <th>num_tot_fa</th>\n",
+       "      <th>last_update_at</th>\n",
+       "      <th>if_LT_led</th>\n",
+       "      <th>LT_email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3145</td>\n",
+       "      <td>Canvas Testing</td>\n",
+       "      <td>Canvas Core Team Sandbox</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2020-07-07 15:02:45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3146</td>\n",
+       "      <td>Canvas Testing</td>\n",
+       "      <td>Growing with Canvas</td>\n",
+       "      <td>36</td>\n",
+       "      <td>10</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-05-05 16:07:49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3147</td>\n",
+       "      <td>Manually-Created Courses</td>\n",
+       "      <td>Admin Guide</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2020-05-08 18:15:06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3148</td>\n",
+       "      <td>Open Membership</td>\n",
+       "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
+       "      <td>36</td>\n",
+       "      <td>9</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2020-07-15 14:38:58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3149</td>\n",
+       "      <td>Canvas Demo Courses</td>\n",
+       "      <td>Template 1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-05-12 16:18:43</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   course_id                      Dept  \\\n",
+       "0       3145            Canvas Testing   \n",
+       "1       3146            Canvas Testing   \n",
+       "2       3147  Manually-Created Courses   \n",
+       "3       3148           Open Membership   \n",
+       "4       3149       Canvas Demo Courses   \n",
+       "\n",
+       "                                        Course_name  num_files  \\\n",
+       "0                          Canvas Core Team Sandbox         11   \n",
+       "1                               Growing with Canvas         36   \n",
+       "2                                       Admin Guide         26   \n",
+       "3  Career Foundations - Incoming MBA Class of 2022          36   \n",
+       "4                                        Template 1          2   \n",
+       "\n",
+       "   num_assignments  num_tot_fa      last_update_at  if_LT_led  LT_email  \n",
+       "0               15          26 2020-07-07 15:02:45          0       NaN  \n",
+       "1               10          46 2020-05-05 16:07:49          0       NaN  \n",
+       "2                0          26 2020-05-08 18:15:06          0       NaN  \n",
+       "3                9          45 2020-07-15 14:38:58          0       NaN  \n",
+       "4                3           5 2020-05-12 16:18:43          0       NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -531,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -539,6 +670,13 @@
      "output_type": "stream",
      "text": [
       "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:21: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(38, 9)\n"
      ]
     }
    ],
@@ -572,14 +710,15 @@
     "        print('Error {} for user {}'.format(e, user_email))\n",
     "        pass\n",
     "\n",
-    "print(all_lt_courses.shape)        \n",
+    "\n",
     "all_lt_courses = pd.DataFrame.from_records(lt_courses_row, columns=lt_courses_cols)\n",
+    "print(all_lt_courses.shape)\n",
     "#all_lt_courses\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,6 +736,8 @@
     "ts_cutoff_1m = pd.to_datetime('now') - pd.to_timedelta('30days')\n",
     "all_courses_df['if_active_last_week'] = np.where(all_courses_df.last_update_at>ts_cutoff_1w, True, False)\n",
     "all_courses_df['if_active_last_month'] = np.where(all_courses_df.last_update_at>ts_cutoff_1m, True, False)\n",
+    "all_courses_df['if_active_since_June1'] = np.where(all_courses_df.last_update_at>=pd.to_datetime('2020-06-01'),\n",
+    "                                                   True, False)\n",
     "all_courses_df['if_sandbox_course'] = np.where(all_courses_df.Dept=='Sandboxes', 1, 0)\n",
     "all_courses_df = all_courses_df[all_courses_df.course_id.notna()].reset_index(drop=True)\n",
     "all_courses_df.drop_duplicates(subset=['course_id'], keep='last', inplace=True)\n",
@@ -605,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,14 +756,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:03,  3.98s/it]\n"
+      "1it [00:09,  9.17s/it]\n"
      ]
     }
    ],
